<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
	    android:title="@string/as_memorize_settings_category"
		>
		<CheckBoxPreference
			android:key="chk_hiragana"
			android:title="@string/as_show_hiragana_title"
			android:summaryOn="@string/as_show_hiragana_summary_on"
			android:summaryOff="@string/as_show_hiragana_summary_off"
			android:defaultValue="@bool/chk_hiragana_default_value"
			/>
		<CheckBoxPreference
			android:key="chk_gatakana"
			android:title="@string/as_show_gatakana_title"
			android:summaryOn="@string/as_show_gatakana_summary_on"
			android:summaryOff="@string/as_show_gatakana_summary_off"
			android:defaultValue="@bool/chk_gatakana_default_value"
			/>
		<CheckBoxPreference
			android:key="chk_youm"
			android:title="@string/as_show_youm_title"
			android:summaryOn="@string/as_show_youm_summary_on"
			android:summaryOff="@string/as_show_youm_summary_off"
			android:defaultValue="@bool/chk_youm_default_value"
			/>
		<CheckBoxPreference
			android:key="show_character_mean"
			android:title="@string/as_show_character_mean_title"
			android:summaryOn="@string/as_show_character_mean_summary_on"
			android:summaryOff="@string/as_show_character_mean_summary_off"
			android:defaultValue="@bool/show_character_mean_default_value"
			/>
		<CheckBoxPreference
			android:key="vibrate_next_character"
			android:title="@string/as_vibrate_next_character_title"
			android:summaryOn="@string/as_vibrate_next_character_summary_on"
			android:summaryOff="@string/as_vibrate_next_character_summary_off"
			android:defaultValue="@bool/vibrate_next_character_default_value"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/as_app_info_category"
		>
		<PreferenceScreen 
			android:key="jc_program_info"
			android:title="@string/as_app_info_title"
   			android:summary="@string/as_app_info_summary"
   			/>
		<PreferenceScreen
			android:title="@string/as_developer_info_title"
   			android:summary="@string/as_developer_info_summary"
   			>
   			<intent
            	android:action="android.intent.action.SENDTO"
            	android:data="mailto:darkkaiser78@hotmail.com"
            	/>
   		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>
